# transmogrify

./: BUILD.bazel  MODULE.bazel  check_transmogrified.py  transmogrify.bzl  transmogrify.py
